# nails-agent-platform

./: .env.example  .gitignore  Caddyfile  README.md  pyproject.toml
.claude/: launch.json
config/: signals.yaml
consumer/: app.py  app_hand_check.py
consumer/data/: color_feature_rules.json
consumer/src/: nail_feature_extractor.py  storage.py
consumer/决策/: data_schema_v1.md  demo_flow_v1.md
data/: color_feature_rules.json  nail_styles_store.json  nail_styles_v2.json  nail_visual_features.json  reference_hand_profiles.json
docs/: architecture_preview.html  e2e_preview_report.md  index.md
docs/develop/: acceptance_plan.md  agents.md  api_reference.md  architecture.md  codebase.md  developer_guide.md
nails_agent/: __main__.py
nails_agent/agents/: action_executor.py  agent_config.py  base_tool_agent.py  campaign_agent.py  chat_runner.py  hermes_chat.py  nail_agents.py  nail_tools.py  (+4 more)
scripts/: dev.sh  xhs_login.py  xhs_rest_bridge.mjs
tests/: conftest.py  test_api.py  test_event_log.py  test_nail_extractor.py  test_nail_feature_extractor.py  test_nail_length.py  test_recommendation_fallback.py  test_reviewer_guardrail.py  test_signal_collector.py  test_style_store_ingestion.py  test_value_evaluator.py  test_xhs_grid.py  test_xhs_smoke.py
video/: README.md  package-lock.json  package.json  tsconfig.json
web/: alignment.html  app.py  chat_app.py  comfyui_tryon.py  data_loader.py  report.html  report_grid.html  tech_doc.html
workflows/: nail_tryon_klein_9b.json  product_showcase_firered_image_edit1_1.json  social_media_firered_image_edit1_1.json
(+48 files in other folders)
