[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nails-agent"
version = "0.2.0"
description = "AI Nail Trend Analysis & Campaign Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "python-telegram-bot>=20.0",
    "playwright>=1.40",
    "anthropic>=0.40",
    "openai>=1.30",
    "openai-agents>=0.17",
    # Consumer try-on (hand analysis): only loaded when /hand/analyze or
    # /sessions endpoints are hit. Heavy native deps — installable via
    # `pip install -e ".[consumer]"` if you don't need them.
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
consumer = [
    "mediapipe>=0.10.14",
    "opencv-contrib-python>=4.13.0",
    "numpy>=1.26",
]
demo = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "plotly>=5.18",
    "altair>=5.0",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff",
]

[project.scripts]
nails-api   = "nails_agent.api.main:app"
nails-bot   = "nails_agent.bot.telegram:run_polling"

[tool.setuptools.packages.find]
where = ["."]
include = ["nails_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
